--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuPhellipo Mandalas</title>
-    <link rel="stylesheet" href="/Site/src/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <div  class="titulo" style='text-align:center; font-size: 32px;'>
-        <img src="/Site/src/src/Lu Phellipo.png" alt="">
-    </div style='text-align:center'>
+    <div  id="titulo" style='text-align:center; font-size: 32px;'>
+        <h1 class="name"> Lu Phellipo</h1>
+    </div>
 
-    <nav  style=''>
+    <nav>
         <a href="index.html" style="font-weight: bold; color:#C874FF; text-decoration:underline;">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="contate_nos.html">Contate-nos</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="produtos.html">Produtos</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="quem_somos.html">Quem somos</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="ajuda.html">Ajuda</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-    </nav style='text-align:center'>
+    </nav>
+    
     <main>
         <img class="imagem-main" src="/Site/src/src/painel_mandalas.jpeg" alt="">
         <div class="frase">
