alteração nos cards de produtos e conclusão da página de produtos

--- a/index.html
+++ b/index.html
@@ -35,19 +35,15 @@
         <main>
             <article>
                 <figure class="card">
-                    <img class="card-img" src="img/dourada_azul.png" alt="mandala azul e dourada">
+                    <img class="card-img" src="img/amarela_azul.png" alt="mandala amarela e azul">
                     <button class="text-card">Saiba Mais</button>
                 </figure>
                 <figure class="card">
-                    <img class="card-img" src="img/dourada_azul.png" alt="mandala azul e dourada">
+                    <img class="card-img" src="img/beija_flor.png" alt="mandala beija-flor">
                     <button class="text-card">Saiba Mais</button>
                 </figure>
                 <figure class="card">
-                    <img class="card-img" src="img/dourada_azul.png" alt="mandala azul e dourada">
-                    <button class="text-card">Saiba Mais</button>
-                </figure>
-                <figure class="card">
-                    <img class="card-img" src="img/dourada_azul.png" alt="mandala azul e dourada">
+                    <img class="card-img" src="img/dourada_azul.png" alt="mandala dourada e azul">
                     <button class="text-card">Saiba Mais</button>
                 </figure>
             </article>
