--- a/produtos.html
+++ b/produtos.html
@@ -19,7 +19,55 @@
         <a class="link" href="ajuda.html">Ajuda</a>  
     </nav>
 
-
+    <main>
+        <article>
+            <figure class="card">
+                <img class="card-img" src="img/amarela_azul.png" alt="mandala amarela e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/beija_flor.png" alt="mandala beija-flor">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/dourada_azul.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/duas_juntas.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/espelho.jpg" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/mandala dourada e azul, com espelho no meio.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/mandala roxa e verde.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/roxa_verde_espiral.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/verde_arvore.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/ying e yang.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+            <figure class="card">
+                <img class="card-img" src="img/ying e yang 2.png" alt="mandala dourada e azul">
+                <button class="text-card">Saiba Mais</button>
+            </figure>
+        </article>
+    </main>
+<br>
     <footer>
         <div class="instagram">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
