--- a/produtos.html
+++ b/produtos.html
@@ -23,47 +23,47 @@
         <article>
             <figure class="card">
                 <img class="card-img" src="img/amarela_azul.png" alt="mandala amarela e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/CGX1HBKFJSJ/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/beija_flor.png" alt="mandala beija-flor">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/CGX1HBKFJSJ/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/dourada_azul.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Cazt_noFSMe/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/duas_juntas.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Ca2KdyglAEW/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/espelho.jpg" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Cb77eKAr0fu/?img_index=1')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/mandala dourada e azul, com espelho no meio.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/CoTMZPmLFUu/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/mandala roxa e verde.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Cgc0MAwJBLn/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/roxa_verde_espiral.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Cb_FHG6pl9-/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/verde_arvore.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/CfCPmlrFPj7/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/ying e yang.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Cfot2csrL-4/')">Saiba Mais</button>
             </figure>
             <figure class="card">
                 <img class="card-img" src="img/ying e yang 2.png" alt="mandala dourada e azul">
-                <button class="text-card">Saiba Mais</button>
+                <button class="text-card" onclick="(window.location='https://www.instagram.com/p/CfotmsKr42C/')">Saiba Mais</button>
             </figure>
         </article>
     </main>
