--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <article>
                 <figure class="card">
                     <img class="card-img" src="img/amarela_azul.png" alt="mandala amarela e azul">
-                    <button class="text-card">Saiba Mais</button>
+                    <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Ca250VmprqD/')">Saiba Mais</button>
                 </figure>
                 <figure class="card">
                     <img class="card-img" src="img/beija_flor.png" alt="mandala beija-flor">
-                    <button class="text-card">Saiba Mais</button>
+                    <button class="text-card" onclick="(window.location='https://www.instagram.com/p/CGX1HBKFJSJ/')">Saiba Mais</button>
                 </figure>
                 <figure class="card">
                     <img class="card-img" src="img/dourada_azul.png" alt="mandala dourada e azul">
-                    <button class="text-card">Saiba Mais</button>
+                    <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Cazt_noFSMe/')">Saiba Mais</button>
                 </figure>
             </article>
         </main>
