adição do alerta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuPhellipo Mandalas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.0/dist/sweetalert2.min.css">
+    <style>
+        .swal2-popup {
+            font-family: 'Inter', sans-serif;
 
+        }
+        .swal2-confirm, .swall2-cancel {
+            color: black !important;
+        }
+    </style>
 </head>
 <body>
     <header class="mainTitle">
@@ -16,7 +25,7 @@
         <a class="linkHere" href="index.html">Home</a>
         <a class="link" href="contate_nos.html">Contate-nos</a>
         <a class="link" href="produtos.html">Produtos</a>
-        <a class="link" href="quem_somos.html">Quem somos</a>
+        <a class="link" href="Sobre__Nós.html">Quem somos</a>
         <a class="link" href="ajuda.html">Ajuda</a>  
     </nav>
     <main>
@@ -36,15 +45,15 @@
             <article>
                 <figure class="card">
                     <img class="card-img" src="img/amarela_azul.png" alt="mandala amarela e azul">
-                    <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Ca250VmprqD/')">Saiba Mais</button>
+                    <button class="text-card"><a class="redirecionar" href="https://www.instagram.com/p/Ca250VmprqD/">Saiba Mais</a></button>
                 </figure>
                 <figure class="card">
                     <img class="card-img" src="img/beija_flor.png" alt="mandala beija-flor">
-                    <button class="text-card" onclick="(window.location='https://www.instagram.com/p/CGX1HBKFJSJ/')">Saiba Mais</button>
+                    <button class="text-card"><a class="redirecionar" href="https://www.instagram.com/p/CGX1HBKFJSJ/">Saiba Mais</a></button>
                 </figure>
                 <figure class="card">
                     <img class="card-img" src="img/dourada_azul.png" alt="mandala dourada e azul">
-                    <button class="text-card" onclick="(window.location='https://www.instagram.com/p/Cazt_noFSMe/')">Saiba Mais</button>
+                    <button class="text-card"><a class="redirecionar" href="https://www.instagram.com/p/Cazt_noFSMe/">Saiba Mais</a></button>
                 </figure>
             </article>
         </main>
@@ -76,5 +85,32 @@
         <div class="footer">
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.12.0/dist/sweetalert2.all.min.js"></script>
+    <script>
+        document.querySelectorAll('.redirecionar').forEach(function(element)  {
+            element.addEventListener('click', function(event){
+        event.preventDefault(); // Impede o redirecionamento padrão
+        const href = this.href;
+        
+        Swal.fire({
+            title: 'Você deseja ser redirecionado para o link?',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonText: 'Sim',
+            cancelButtonText: 'Não',
+            confirmButtonColor: "#EFD8FE",
+            customClass: {
+                    confirmButton: 'swal2-confirm',
+                    cancelButton: 'swal2-cancel'
+                },
+            cancelButtonColor: "#d33",
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = href; // Redireciona para o link se confirmado
+            }
+            });
+        });
+    });
+    </script>
 </body>
 </html>
