--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     confirmButton: 'swal2-confirm',
                     cancelButton: 'swal2-cancel'
                 },
-            cancelButtonColor: "#d33",
+            cancelButtonColor: "#c8c8c8",
         }).then((result) => {
             if (result.isConfirmed) {
                 window.location.href = href; // Redireciona para o link se confirmado
