--- a/Footer.html
+++ b/Footer.html
@@ -5,7 +5,7 @@ HTML DO FOOTER ATUALIZADO
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer no Final da Página</title>
-    <link rel="stylesheet" href="5styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <footer>
@@ -21,46 +21,4 @@ HTML DO FOOTER ATUALIZADO
 </footer>
 </body>
 </html>
-CSS DO FOOTER
-body {
-    margin: 0;
-    padding: 0;
-}
 
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #fff;
-    text-align: center;
-}
-
-.footer-bar {
-    background-color: #9867B899;
-    color: #010B13;
-    padding: 5px 0; 
-    margin: 0;
-}
-
-.footer-background {
-    background-color: #EFD8FE;
-    padding: 27px 0; 
-    margin: 0;
-    position: relative;
-}
-
-.social-media {
-    position: absolute;
-    right: 10px; 
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.social-media a {
-    margin: 0;
-}
-
-.social-media img {
-    width: 30px;
-    height: auto;
-}
