--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <main>
         <img class="img" src="img/banner.jpg" alt="mandalas">
         <div class="quote">
-            <p class="text">“A natureza inspira minha arte"<br>por Luciana Phellipo</p>
+            <p class="text">“A natureza inspira minha arte"</p>
         </div>
         
         <div class="produtos">
             <div class="produtos-escrito">
-                <p>Produtos <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16" onclick="(window.location='https://www.instagram.com/luphellipo/')">
+                <p>Mandalas <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16" onclick="(window.location='https://www.instagram.com/luphellipo/')">
                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
                   </svg></p>
             </div>
@@ -80,7 +80,7 @@
               </svg>
         </div><br>
         <div class="legenda-footer">
-            <h3>Por Luciana Phellipo - Artista Plástica</h3>
+            <h4>Por Luciana Phellipo - Artista Plástica</h4>
         </div>
         <div class="footer">
         </div>
