--- a/ajuda.html
+++ b/ajuda.html
@@ -18,6 +18,12 @@
         <a class="link" href="quem_somos.html">Quem somos</a>
         <a class="linkHere" href="ajuda.html">Ajuda</a>  
     </nav>
+    <main>
+        <div class="contatenos-img-container">
+            <img src="/img/SL.jpg" alt="foto-mandala" >
+            <div class="text-overlay">Ajuda</div>
+        </div>
+    </main>
 
 
 
