--- a/contate_nos.html
+++ b/contate_nos.html
@@ -22,7 +22,7 @@
     </nav>
     <main>
         <div class="contatenos-img-container">
-            <img src="/img/purple2.jpg" alt="foto-mandala" >
+            <img src="/img/SL.jpg" alt="foto-mandala" >
             <div class="text-overlay">Contate-nos</div>
         </div>
     </main>
@@ -39,7 +39,7 @@
             </svg>
         </div><br>
         <div class="legenda-footer">
-            <h3>Por Luciana Phellipo - Artista Plástica</h3>
+            <h4>Por Luciana Phellipo - Artista Plástica</h4>
         </div>
         <div class="footer">
         </div>
