--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <a class="linkHere" href="index.html">Home</a>
         <a class="link" href="contate_nos.html">Contate-nos</a>
         <a class="link" href="produtos.html">Produtos</a>
-        <a class="link" href="Sobre__Nós.html">Quem somos</a>
+        <a class="link" href="quem_somos.html">Quem somos</a>
         <a class="link" href="ajuda.html">Ajuda</a>  
     </nav>
     <main>
         <img class="img" src="img/banner.jpg" alt="mandalas">
         <div class="quote">
-            <p class="text">“A natureza inspira minha arte"</p>
+            <p class="text">“A natureza inspira minha arte"</p> <p>por Luciana Phellipo</p>
         </div>
         
         <div class="produtos">
@@ -42,7 +42,7 @@
             </div>
         </div>
         <main>
-            <article>
+            <article class="flex-home">
                 <figure class="card">
                     <img class="card-img" src="img/amarela_azul.png" alt="mandala amarela e azul">
                     <button class="text-card"><a class="redirecionar" href="https://www.instagram.com/p/Ca250VmprqD/">Saiba Mais</a></button>
