update geral em todas as páginas

--- a/galeria.html
+++ b/galeria.html
@@ -9,68 +9,6 @@
     <style>
         .swal2-popup {
             font-family: 'Inter', sans-serif;
-<<<<<<< HEAD
-
-        }
-        .swal2-confirm, .swall2-cancel {
-            color: black !important;
-        }
-
-.grind-produtos {
-    display: grid;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    margin: 73px 0 73px 0;
-}
-
-.card {
-    width: 409px;
-    height: 499px;
-    border-radius: 50px;
-    background: #EFD8FE;
-    display: inline-block;
-    justify-self: center;
-}
-
-.card-img {
-    
-    width: 409px;
-    height: 419px;
-    border-radius: 50px;
-    padding-top: 0px;
-    transition: all 250ms;
-}
-
-.card-img:hover {
-    transform: scale(1.04);
-    border-radius: 15px 15px 15px 15px;
-    box-shadow: 0px 0px 20px rgba(225, 145, 243, 0.772);
-}
-
-button {
-    font-family: Inter;
-    font-weight: bold;
-    background-color: #fefcff;
-    padding: 14px 24px;
-    border: unset;
-    border-radius: 50px;
-    z-index: 0;
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 14px 0 0 33px;
-    transition: all 250ms;
-}
-
-
-button:hover {
-    background-color: #d7a9f5;
-    cursor: pointer;
-    transform: scale(1.1)
-=======
->>>>>>> 2fd1bed5d31ba33bac3ca9f85fe63f6d0bcb91f2
 }
     </style>
 </head>
@@ -82,7 +20,7 @@ button:hover {
     <nav class="navBar">
         <a class="link" href="index.html">Home</a>
         <a class="link" href="contate_nos.html">Contate-nos</a>
-        <a class="linkHere" href="produtos.html">Produtos</a>
+        <a class="linkHere" href="galeria.html">Galeria</a>
         <a class="link" href="quem_somos.html">Quem somos</a>
         <a class="link" href="ajuda.html">Ajuda</a>  
     </nav>
@@ -138,14 +76,19 @@ button:hover {
             </figure>
             </div>
         </article>
-        <div>
-            <h5>quer ver mais mandalas?</h5>
-            <button>Abrir</button>
+        <p class="mainTitle">Quer ver mais mandalas?</p>
+        <div class="botao">
+            <button class="redirecionar">Clique aqui</button>
         </div>
     </main>
 
 <br>
     <footer>
+        <div class="whatsapp">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="redirecionar" viewBox="0 0 16 16" id="wpp">
+                <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+              </svg>
+          </div> 
         <div class="instagram">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="redirecionar" viewBox="0 0 16 16" href="https://www.instagram.com/luphellipo/">
                 <a src="https://www.instagram.com/luphellipo/">.</a>
@@ -154,7 +97,7 @@ button:hover {
               </svg>
         </div><br>
         <div class="legenda-footer">
-            <h3>Por Luciana Phellipo - Artista Plástica</h3>
+            <h4>Por Luciana Phellipo - Artista Plástica <br><br> <a class="redirecionar" href="https://www.flaticon.com/br/icones-gratis/mandala" title="mandala ícones">Favicon criado por Freepik - Flaticon</a></h4>
         </div>
         <div class="footer">
         </div>
