--- a/ajuda.html
+++ b/ajuda.html
@@ -28,10 +28,39 @@
             <img src="/img/SL.jpg" alt="foto-mandala" >
             <div class="text-overlay">Ajuda</div>
         </div>
+    </main> 
+    <main>
+        <div class="box-ajuda">
+            <p class="ajuda">
+                Está é pagina de ajuda, aqui temos as informações necessárias sobre o site para auxiliar a sua condução nele. </p>
+                <br>
+                <p class="mainTitle">
+                    Sobre a Home
+                </p>
+            <p class="ajuda">
+                Na pagina principal temos algumas mandalas, e ao clicar em "Saiba mais", o cliente será direcionado para a publicação daquele produto onde terá mais informações detalhadas, através desse caminho, é também um meio de contato conosco. Um pouco abaixo, mostramos um pouco mais da nossa empresa e a arte. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto. </p>
+                <br>
+                <p class="mainTitle">
+                    Sobre a Contate-nos
+                </p>
+            <p class="ajuda">
+                Na pagina "Contate-nos", algumas pessoas podem pedir mais de um produto, tirar duvidas de valores e questionar alguns problemas em relação as compras ao clicar em "Entre em contato", assim você será encaminhado para o WhatsApp profissional da empresa, que disponibilizamos para justamente esses requisitos. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto </p>
+                <br>
+                <p class="mainTitle">
+                    Sobre a Galeria
+                </p>
+            <p class="ajuda">
+                Na pagina da "Galeria", são exibidos algumas fotografias dos produtos e em "Saiba mais" você irá diretamente para a publicação do Instagram, onde será disponibilizado mais fotos e ângulos diferentes das mandalas, fora as informações dadas em relação a elas. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto </p>
+                <br>
+                <p class="mainTitle">
+                    Sobre a Quem somos
+                </p>
+            <p class="ajuda">
+                Na pagina "Quem somos", fala mais sobre nossa empresa, nossos propósitos e o que queremos transmitir com os nosso produtos, compartilhando também a nossa visão, missão e nossos valores. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto</p>
+            </p>
+        </div>
     </main>
-
-
-
+    <br>
     <footer>
         <div class="whatsapp">
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="redirecionar" viewBox="0 0 16 16" id="wpp">
