ajuste na pontuação da página de ajuda

--- a/ajuda.html
+++ b/ajuda.html
@@ -44,19 +44,19 @@
                     Sobre a Contate-nos
                 </p>
             <p class="ajuda">
-                Na pagina "Contate-nos", algumas pessoas podem pedir mais de um produto, tirar duvidas de valores e questionar alguns problemas em relação as compras ao clicar em "Entre em contato", assim você será encaminhado para o WhatsApp profissional da empresa, que disponibilizamos para justamente esses requisitos. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto </p>
+                Na pagina "Contate-nos", algumas pessoas podem pedir mais de um produto, tirar duvidas de valores e questionar alguns problemas em relação as compras ao clicar em "Entre em contato", assim você será encaminhado para o WhatsApp profissional da empresa, que disponibilizamos para justamente esses requisitos. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto. </p>
                 <br>
                 <p class="mainTitle">
                     Sobre a Galeria
                 </p>
             <p class="ajuda">
-                Na pagina da "Galeria", são exibidos algumas fotografias dos produtos e em "Saiba mais" você irá diretamente para a publicação do Instagram, onde será disponibilizado mais fotos e ângulos diferentes das mandalas, fora as informações dadas em relação a elas. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto </p>
+                Na pagina da "Galeria", são exibidos algumas fotografias dos produtos e em "Saiba mais" você irá diretamente para a publicação do Instagram, onde será disponibilizado mais fotos e ângulos diferentes das mandalas, fora as informações dadas em relação a elas. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto. </p>
                 <br>
                 <p class="mainTitle">
                     Sobre a Quem somos
                 </p>
             <p class="ajuda">
-                Na pagina "Quem somos", fala mais sobre nossa empresa, nossos propósitos e o que queremos transmitir com os nosso produtos, compartilhando também a nossa visão, missão e nossos valores. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto</p>
+                Na pagina "Quem somos", fala mais sobre nossa empresa, nossos propósitos e o que queremos transmitir com os nosso produtos, compartilhando também a nossa visão, missão e nossos valores. No final temos um ícone do Instagram que irá te redirecionar. Um ícone fixo do WhatsApp irá aparecer durante toda a página te redirecionando para o contato direto.</p>
             </p>
         </div>
     </main>
