adição de visão, missão e valor

--- a/quem_somos.html
+++ b/quem_somos.html
@@ -52,16 +52,19 @@
 
         <section class="valores">
             <div class="valor-item">
-                <img src="imagem1.png" alt="Visão">
+                <img src="" alt="Visão">
                 <h4>Visão</h4>
+                <p>As mandalas e os símbolos trazem arquétipos que provocam mudança interna. Na visão artística a ideia não é alcançar a perfeição, mas uma conexão em toda totalidade.<br> Ao admirar uma mandala, observe o que o inconsciente  te faz alcançar  internacionalmente. Na visão de Carl Jung,  sempre desenhava uma nova mandala e defendia que a configuração atual indicava o seu momento interno.</p>
             </div>
             <div class="valor-item">
-                <img src="imagem 2.png" alt="Missão">
+                <img src="" alt="Missão">
                 <h4>Missão</h4>
+                <p>Sabemos que as mandalas são mais do que simples figuras geométricas. Elas são artes com propósito. São portais para o autoconhecimento auxiliando na transformação pessoal.</p>
             </div>
             <div class="valor-item">
-                <img src="imagem 3.png" alt="Valores">
+                <img src="" alt="Valores">
                 <h4>Valores</h4>
+                <p>Cada arte é única e 100% artesanal.</p>
             </div>
         </section>
     </main>
